--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/telescope": "^5.2",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "wijourdil/ntfy-notification-channel": "^2.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
