--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.1",
         "althinect/filament-spatie-roles-permissions": "^2.2",
+        "bezhansalleh/filament-shield": "^3.3",
         "f9webltd/laravel-api-response-helpers": "^2.0",
         "filament/filament": "3.2",
         "guzzlehttp/guzzle": "^7.2",
