--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.1",
         "althinect/filament-spatie-roles-permissions": "^2.2",
         "bezhansalleh/filament-shield": "^3.3",
+        "dedoc/scramble": "^0.12.19",
         "f9webltd/laravel-api-response-helpers": "^2.0",
         "filament/filament": "3.2",
         "guzzlehttp/guzzle": "^7.2",
